--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
