--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^12.0.5",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "vue": "^3.4.21",
