--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuepic/vue-datepicker": "^12.0.5",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "sweetalert2": "^11.26.17",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.3.0"
